# sgx-step

./: .gitignore  .gitmodules  .travis.yml  0000-32bit-compatibility-fixes.patch  0001-Support-to-reconfigure-Asynchronous-Exit-Pointer-AEP.patch  0001-reconfigure-AEP-TCS-ebase.patch  0002-Add-support-to-retrieve-most-recently-used-TCS-point.patch  0003-Support-to-set-enclave-load-location.patch  README-m32.md  README.md  check_sys.sh  install_SGX_SDK.sh  install_SGX_driver.sh  patch_sdk.sh
.github/workflows/: ci.yaml
app/: .gitignore  sgx-step-config.h
app-oe/: README.md
app-oe/helloworld/: CMakeLists.txt  README.md
app/aep-redirect/: Makefile  README.md  main.c  patch.sh
app/apic/: .gitignore  Makefile  README.md  irq_entry.S  parse.py
app/apic-ipi/: .gitignore  parse.py
app/baresgx/: Makefile  README.md  main.c
app/bench/: .gitignore  Makefile  main.c  parse_nop.py  parse_strlen.py  parse_zz.py
app/cpl/: Makefile  README.md  asm.S  main.c
kernel/: Makefile  install_SGX_driver.sh  sgxstep.c  sgxstep_internal.h  sgxstep_ioctl.h
libsgxstep/: Makefile  Makefile.config  aep.c  aep.h  aep_trampoline.S  apic.c  apic.h  cache.h  config.h  counter.c  counter.h  cpu.c  cpu.h  debug.c  debug.h  desc.h  elf_parser.c  elf_parser.h  enclave.c  enclave.h  enclu.c  enclu.h  file.c  file.h  foreshadow.c  foreshadow.h  gdt.c  gdt.h  idt.c  idt.h  irq_entry.S  msr.c  msr.h  pf.c  pf_abstractions.c  pf_abstractions.h  pf_irq_entry.S  pt.c  pt.h  pt_abstractions.c  (+23 more)
sdk/: README.md
sgxstep-sys/: Cargo.toml  build.rs  wrapper.h
sgxstep-sys/src/: lib.rs
(+135 files in other folders)
